# chess-engine

./: .gitignore  README.md  chess.py  main.py  main_mcts.py  mcts_ai.py  pyproject.toml  random_ai.py
server/: chess.py  main.py  mcts_ai.py  package-lock.json  pyproject.toml  server.py
server/app/: api.py
ui/: package-lock.json  package.json
ui/chess-engine/: package-lock.json  package.json
ui/chess-engine/src/: App.js
ui/chess-engine/src/components/: ChessboardComponent.jsx
ui/chess-engine/src/styling/: ChessboardComponent.css
ui/src/: index.js
ui/src/components/: Home.jsx  Navbar.jsx
ui/src/style/: Home.css  Navbar.css
